--- a/public/main/css/style.css
+++ b/public/main/css/style.css
@@ -10,6 +10,7 @@ html, body{
     font-family: 'Lato', sans-serif;
     background: #fff;
 }
+
 body a {
     text-decoration:none;
     transition:0.5s all;
@@ -70,6 +71,28 @@ label{
     opacity: 0;
     -moz-opacity: 0;
     filter: alpha(opacity=0);
+}
+.StripeElement {
+    background-color: white;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
+
+}
+
+
+.StripeElement--focus {
+    box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--invalid {
+    border-color: #fa755a;
+}
+
+.StripeElement--webkit-autofill {
+    background-color: #fefde5 !important;
 }
 /*-- //to-top --*/
 /*--donate_form --*/
