working on setting controller ¨

--- a/public/main/css/style.css
+++ b/public/main/css/style.css
@@ -873,11 +873,11 @@ figure.effect-winston:hover p:first-child span{
     text-decoration: none;
 }
 .agileinfo_events_grid1 h5 a:hover{
-    color: #13a538;
+    color: black;
 }
 .agileinfo_events_grid1 p{
     margin:0 0em 0.5em 0;
-    color: #555;
+    color: orangered;
     line-height: 2em;
 }
 .agileits_event_grid_date{
@@ -937,7 +937,7 @@ figure.effect-winston:hover p:first-child span{
     color: #e3001f;
 }
 .team-grids h5  span{
-    color: #13a538;
+    color: black;
 }
 .team-grids p {
     margin-top: 1em;
@@ -3890,12 +3890,12 @@ figure.effect-winston p {
 
 figure.effect-winston p span {
     margin: 0 0 0 1em;
-    color: #13a538;
-    font-size: 1em;
+    color: black;
+    font-size: 1.3em;
 }
 
 figure.effect-winston p span:hover{
-    color:#212121;
+    color:black;
 }
 
 figure.effect-winston:hover p span {
