--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,11 @@
 
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons');
 
 // Variables
 @import 'variables';
+// index.js or main.js
+@import '~vuetify/dist/vuetify.min.css';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
