finished crud of forum question

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,8 @@
 @import 'variables';
 // index.js or main.js
 @import '~vuetify/dist/vuetify.min.css';
+@import '~simplemde/dist/simplemde.min.css';
+
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
